YugabyteDB: format and rewrite tests using AssertJ